# Dice-Bot

./: .breakpoints  .cache  .env  .gitignore  README.md  file  functions.py  gif.txt  main.py  music.py  pyproject.toml  requirements.txt
Bot/: main.py
Bot/cogs/: games.py  general.py  music.py
cogs/: discordtogether.py  games.py  general.py  helpcommand.py  league.py  music.py  openai.py  wavelink.py
legacy/: music.py
