[tool.poetry]
name = "repl_python3_Dice-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-together = "^1.1.1"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
youtube_dl = "^2021.6.6"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
